[package]
name = "jbm-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "58f1ecbf0089194d729327692adca6391fc24932" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "58f1ecbf0089194d729327692adca6391fc24932" }
jbm-common = { path = "../jbm-common" }

[[bin]]
name = "jbm"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
