[package]
name = "jbm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "58f1ecbf0089194d729327692adca6391fc24932", features=["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "58f1ecbf0089194d729327692adca6391fc24932" }
jbm-common = { path = "../jbm-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "io-util", "fs", "time"] }
libc = "0.2.144"
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
tempfile = "3.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
async-trait = "0.1.68"
blazesym = "0.2.0-alpha.1"
nix = "0.26.2"

[[bin]]
name = "jbm"
path = "src/main.rs"
